DOC-13347 fix unreadable inline example
Our highlightjs style breaks redocly inline examples, so we ensure it is ignored.

Q: should we instead disable highlightjs for these pages?

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -114,6 +114,15 @@
   visibility: visible;
 }
 
+.three-column-row h1:hover a.anchor,
+.three-column-row h2:hover a.anchor,
+.three-column-row h3:hover a.anchor,
+.three-column-row h4:hover a.anchor,
+.three-column-row h5:hover a.anchor,
+.three-column-row h6:hover a.anchor {
+  visibility: hidden;
+}
+
 .doc i.fa {
   font-style: normal;
 }
